kubernetes/apps/default/nextcloud/mariadb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-mariadb
  namespace: default
  labels:
    app: nextcloud-mariadb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud-mariadb
  template:
    metadata:
      labels:
        app: nextcloud-mariadb
    spec:
      containers:
        - name: mariadb
          image: lscr.io/linuxserver/mariadb:11.4.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: config
              mountPath: /config
          readinessProbe:
            tcpSocket:
              port: mysql
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: mysql
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nextcloud-mariadb-config-pvc
