kubernetes/apps/default/nextcloud/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mariadb
  namespace: default
  labels:
    app: nextcloud-mariadb
spec:
  selector:
    app: nextcloud-mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      protocol: TCP
