kubernetes/apps/default/nextcloud/nextcloud-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: default
  labels:
    app: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
