kubernetes/apps/default/nextcloud/nextcloud-ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nextcloud
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`cloud.torquasmvo.com`)
      services:
        - name: nextcloud
          namespace: default
          port: 443
  tls:
    passthrough: true
